Asgm1/assignment1/src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from d://_ACADEMIC//HCMUT//Term232//PPL//Assignment//Asgm1//assignment1//src//main//zcode//parser//ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'dynamic'", "'<-'", "'func'", 
                     "'begin'", "'end'", "'return'", "'for'", "'until'", 
                     "'by'", "'break'", "'continue'", "'if'", "'elif'", 
                     "'else'", "'('", "')'", "'['", "']'", "','", "'not'", 
                     "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'...'", "'=='", "'!='", "'='", "'<='", "'>='", "'<'", 
                     "'>'", "'bool'", "<INVALID>", "'number'", "<INVALID>", 
                     "'string'" ]

    symbolicNames = [ "<INVALID>", "VAR", "DYNAMIC", "ASSIGN_OPS", "FUNC", 
                      "BEGIN", "END", "RETURN", "FOR", "UNTIL", "BY", "BREAK", 
                      "CONTINUE", "IF", "ELIF", "ELSE", "LB", "RB", "LSB", 
                      "RSB", "COMMA", "NOT", "AND", "OR", "ADD_OPS", "SUB_OPS", 
                      "MUL_OPS", "DIV_OPS", "MOD_OPS", "CONCAT_OPS", "EQS", 
                      "NEQ", "EQ", "LEQ", "GEQ", "LT", "GT", "BOOL_TYP", 
                      "BOOL_LIT", "NUM_TYP", "NUM_LIT", "STR_TYP", "STRING_LIT", 
                      "IDENTIFIER", "NEWLINE", "COMMENT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declare_list = 1
    RULE_declare = 2
    RULE_newlines = 3
    RULE_var_declare = 4
    RULE_implicit_var = 5
    RULE_keyword_var = 6
    RULE_dynamic_var = 7
    RULE_func_declare = 8
    RULE_paramList = 9
    RULE_paramList_prime = 10
    RULE_param = 11
    RULE_body = 12
    RULE_expr = 13
    RULE_expr_concat = 14
    RULE_expr_rela = 15
    RULE_expr_logic = 16
    RULE_expr_add = 17
    RULE_expr_mul = 18
    RULE_expr_not = 19
    RULE_expr_sign = 20
    RULE_expr_idx = 21
    RULE_operand = 22
    RULE_funcCall = 23
    RULE_literal = 24
    RULE_array_lit = 25
    RULE_stmt = 26
    RULE_if_stmt = 27
    RULE_elif_stmtList = 28
    RULE_elif_stmt = 29
    RULE_else_stmt = 30
    RULE_for_stmt = 31
    RULE_decl_stmt = 32
    RULE_assign_stmt = 33
    RULE_leftSide = 34
    RULE_break_stmt = 35
    RULE_continue_stmt = 36
    RULE_return_stmt = 37
    RULE_funcCall_stmt = 38
    RULE_block_stmt = 39
    RULE_numList = 40
    RULE_numList_prime = 41
    RULE_argList = 42
    RULE_exprList = 43
    RULE_exprList_prime = 44
    RULE_stmtList = 45
    RULE_stmtList_prime = 46
    RULE_typ = 47

    ruleNames =  [ "program", "declare_list", "declare", "newlines", "var_declare", 
                   "implicit_var", "keyword_var", "dynamic_var", "func_declare", 
                   "paramList", "paramList_prime", "param", "body", "expr", 
                   "expr_concat", "expr_rela", "expr_logic", "expr_add", 
                   "expr_mul", "expr_not", "expr_sign", "expr_idx", "operand", 
                   "funcCall", "literal", "array_lit", "stmt", "if_stmt", 
                   "elif_stmtList", "elif_stmt", "else_stmt", "for_stmt", 
                   "decl_stmt", "assign_stmt", "leftSide", "break_stmt", 
                   "continue_stmt", "return_stmt", "funcCall_stmt", "block_stmt", 
                   "numList", "numList_prime", "argList", "exprList", "exprList_prime", 
                   "stmtList", "stmtList_prime", "typ" ]

    EOF = Token.EOF
    VAR=1
    DYNAMIC=2
    ASSIGN_OPS=3
    FUNC=4
    BEGIN=5
    END=6
    RETURN=7
    FOR=8
    UNTIL=9
    BY=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELIF=14
    ELSE=15
    LB=16
    RB=17
    LSB=18
    RSB=19
    COMMA=20
    NOT=21
    AND=22
    OR=23
    ADD_OPS=24
    SUB_OPS=25
    MUL_OPS=26
    DIV_OPS=27
    MOD_OPS=28
    CONCAT_OPS=29
    EQS=30
    NEQ=31
    EQ=32
    LEQ=33
    GEQ=34
    LT=35
    GT=36
    BOOL_TYP=37
    BOOL_LIT=38
    NUM_TYP=39
    NUM_LIT=40
    STR_TYP=41
    STRING_LIT=42
    IDENTIFIER=43
    NEWLINE=44
    COMMENT=45
    WS=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_list(self):
            return self.getTypedRuleContext(ZCodeParser.Declare_listContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 96
                self.match(ZCodeParser.NEWLINE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.declare_list()
            self.state = 103
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(ZCodeParser.DeclareContext,0)


        def declare_list(self):
            return self.getTypedRuleContext(ZCodeParser.Declare_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declare_list




    def declare_list(self):

        localctx = ZCodeParser.Declare_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare_list)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.declare()
                self.state = 106
                self.declare_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declareContext,0)


        def newlines(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declareContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declare




    def declare(self):

        localctx = ZCodeParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 37, 39, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.var_declare()
                self.state = 112
                self.newlines()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.func_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewlinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def newlines(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_newlines




    def newlines(self):

        localctx = ZCodeParser.NewlinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_newlines)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(ZCodeParser.NEWLINE)
                self.state = 118
                self.newlines()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(ZCodeParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def implicit_var(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_varContext,0)


        def keyword_var(self):
            return self.getTypedRuleContext(ZCodeParser.Keyword_varContext,0)


        def dynamic_var(self):
            return self.getTypedRuleContext(ZCodeParser.Dynamic_varContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var_declare




    def var_declare(self):

        localctx = ZCodeParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declare)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.implicit_var()
                pass
            elif token in [37, 39, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.keyword_var()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.dynamic_var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OPS(self):
            return self.getToken(ZCodeParser.ASSIGN_OPS, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_var




    def implicit_var(self):

        localctx = ZCodeParser.Implicit_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_implicit_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ZCodeParser.VAR)
            self.state = 128
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 129
            self.match(ZCodeParser.ASSIGN_OPS)
            self.state = 130
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def numList_prime(self):
            return self.getTypedRuleContext(ZCodeParser.NumList_primeContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def ASSIGN_OPS(self):
            return self.getToken(ZCodeParser.ASSIGN_OPS, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_keyword_var




    def keyword_var(self):

        localctx = ZCodeParser.Keyword_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_keyword_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.typ()
            self.state = 133
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 134
                self.match(ZCodeParser.LSB)
                self.state = 135
                self.numList_prime()
                self.state = 136
                self.match(ZCodeParser.RSB)


            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 140
                self.match(ZCodeParser.ASSIGN_OPS)
                self.state = 141
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dynamic_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OPS(self):
            return self.getToken(ZCodeParser.ASSIGN_OPS, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dynamic_var




    def dynamic_var(self):

        localctx = ZCodeParser.Dynamic_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dynamic_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ZCodeParser.DYNAMIC)
            self.state = 145
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 146
                self.match(ZCodeParser.ASSIGN_OPS)
                self.state = 147
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(ZCodeParser.ParamListContext,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(ZCodeParser.BodyContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_declare




    def func_declare(self):

        localctx = ZCodeParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(ZCodeParser.FUNC)
            self.state = 151
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 152
            self.match(ZCodeParser.LB)
            self.state = 153
            self.paramList()
            self.state = 154
            self.match(ZCodeParser.RB)
            self.state = 155
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramList_prime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamList_primeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramList




    def paramList(self):

        localctx = ZCodeParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramList)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37, 39, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.paramList_prime()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamList_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def paramList_prime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamList_primeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramList_prime




    def paramList_prime(self):

        localctx = ZCodeParser.ParamList_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList_prime)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.param()
                self.state = 162
                self.match(ZCodeParser.COMMA)
                self.state = 163
                self.paramList_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def numList_prime(self):
            return self.getTypedRuleContext(ZCodeParser.NumList_primeContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_param




    def param(self):

        localctx = ZCodeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.typ()
            self.state = 169
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 170
                self.match(ZCodeParser.LSB)
                self.state = 171
                self.numList_prime()
                self.state = 172
                self.match(ZCodeParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def newlines(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_body




    def body(self):

        localctx = ZCodeParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==44:
                    self.state = 176
                    self.newlines()


                self.state = 181
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [7]:
                    self.state = 179
                    self.return_stmt()
                    pass
                elif token in [5]:
                    self.state = 180
                    self.block_stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.newlines()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_concat(self):
            return self.getTypedRuleContext(ZCodeParser.Expr_concatContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_expr




    def expr(self):

        localctx = ZCodeParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.expr_concat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_concatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_rela(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Expr_relaContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Expr_relaContext,i)


        def CONCAT_OPS(self):
            return self.getToken(ZCodeParser.CONCAT_OPS, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_expr_concat




    def expr_concat(self):

        localctx = ZCodeParser.Expr_concatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr_concat)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.expr_rela()
                self.state = 189
                self.match(ZCodeParser.CONCAT_OPS)
                self.state = 190
                self.expr_rela()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.expr_rela()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_relaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
